[package]
name    = "inotify-sys"
version = "0.1.4-dev"
authors = ["Hanno Braun <hb@hannobraun.de>"]

description   = "inotify bindings for the Rust programming language"
documentation = "https://docs.rs/inotify-sys"
repository    = "https://github.com/hannobraun/inotify-sys"
license       = "ISC"
readme        = "README.md"

keywords   = ["inotify", "linux"]
categories = ["external-ffi-bindings", "filesystem"]
exclude    = ["/.travis.yml", "/inotify-sys.sublime-project"]

[badges]
travis-ci = { repository = "inotify-rs/inotify-sys" }

[target.'cfg(not(target_env = "sgx"))'.dependencies]
sgx_tstd = { version = "1.0", rev = "v1.1.2", git = "https://github.com/apache/teaclave-sgx-sdk.git", features=["untrusted_fs"] }
sgx_libc = { version = "1.0", rev = "v1.1.2", git = "https://github.com/apache/teaclave-sgx-sdk.git" }
